...
        app:layout_constraintTop_toBottomOf="@+id/preview_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/gallery_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/baseline_photo_library_24"
            android:contentDescription="Gallery Image Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/capture_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:backgroundTint="@color/white" />

        <ImageButton
            android:id="@+id/capture_button"
...
